Restore jdk11 compatibility