@@ -169,11 +169,11 @@ class HttpFeedClient implements FeedClient {
             HttpResponse response = future.get(timeout.plus(Duration.ofSeconds(5)).getSeconds(), TimeUnit.SECONDS);
             if (response.code() != 200) {
                 String message;
-                if (response.body() != null) message = switch (response.contentType()) {
-                    case "application/json" -> parseMessage(response.body());
-                    case "text/plain" -> new String(response.body(), UTF_8);
-                    default -> response.toString();
-                };
+                if (response.body() != null) switch (response.contentType()) {
+                    case "application/json": message = parseMessage(response.body()); break;
+                    case "text/plain": message = new String(response.body(), UTF_8); break;
+                    default: message = response.toString(); break;
+                }
                 else message = response.toString();
 
                 // Old server ignores ?dryRun=true, but getting this particular error message means everything else is OK.
@@ -209,11 +209,11 @@ class HttpFeedClient implements FeedClient {
     private enum Outcome { success, conditionNotMet, vespaFailure, transportFailure };
 
     static Result.Type toResultType(Outcome outcome) {
-        return switch (outcome) {
-            case success -> Result.Type.success;
-            case conditionNotMet -> Result.Type.conditionNotMet;
-            default -> throw new IllegalArgumentException("No corresponding result type for '" + outcome + "'");
-        };
+        switch (outcome) {
+            case success: return Result.Type.success;
+            case conditionNotMet: return Result.Type.conditionNotMet;
+            default: throw new IllegalArgumentException("No corresponding result type for '" + outcome + "'");
+        }
     }
 
     private static class MessageAndTrace {
@@ -275,12 +275,15 @@ class HttpFeedClient implements FeedClient {
     }
 
     static Result toResult(HttpRequest request, HttpResponse response, DocumentId documentId) {
-        Outcome outcome = switch (response.code()) {
-            case 200 -> Outcome.success;
-            case 412 -> Outcome.conditionNotMet;
-            case 502, 504, 507 -> Outcome.vespaFailure;
-            default -> Outcome.transportFailure;
-        };
+        Outcome outcome;
+        switch (response.code()) {
+            case 200: outcome = Outcome.success; break;
+            case 412: outcome = Outcome.conditionNotMet; break;
+            case 502:
+            case 504:
+            case 507: outcome = Outcome.vespaFailure; break;
+            default: outcome = Outcome.transportFailure; break;
+        }
 
         MessageAndTrace mat = parse(documentId, response.body());
 
@@ -319,7 +322,12 @@ class HttpFeedClient implements FeedClient {
     }
 
     static String encode(String raw) {
-        return URLEncoder.encode(raw, UTF_8);
+        try {
+            return URLEncoder.encode(raw, UTF_8.name());
+        }
+        catch (UnsupportedEncodingException e) {
+            throw new IllegalStateException(e);
+        }
     }
 
     static String getQuery(OperationParameters params, boolean speedTest) {
